<resources>
    <string name="app_name">FabArtist</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">Search your nearby Make-up Artist and Hair Stylish.</string>
    <string name="intro_2">Make yourself more beatiful more than you think.</string>
    <string name="intro_3">Hire the best Phtographer &amp; create your moment.</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="server_error">Unable to connect server.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$)</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="label_select_img">Select image</string>
    <string name="invoice">Invoice</string>
    <string name="pending">Pending</string>
    <string name="confirm">Confirm</string>
    <string name="acc">Accepted</string>
    <string name="rej">Rejected</string>
    <string name="com">Completed</string>
    <string name="dec">Decline</string>
    <string name="dec_msg">Are you sure you want to decline this appointment?</string>
    <string name="acc_msg">Are you sure you want to Accept this appointment?</string>
    <string name="comp">Complete</string>
    <string name="close_msg">Are your sure you want to close FabArtist?</string>
    <string name="yes">YES!</string>
    <string name="no">NO</string>
    <string name="my_profile">Your Profile</string>
    <string name="select_img">Select Image From</string>
    <string name="select_pic">Select Picture</string>
    <string name="jobs_comleted">Jobs Completed</string>
    <string name="completion">Completion</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="review">REVIEW</string>
    <string name="F">Hourly Rate</string>
    <string name="rate">Rate</string>
    <string name="hr">/hr</string>
    <string name="fix_rate">Fix Rate</string>
    <string name="fixed_rate">fixed rate</string>
    <string name="commis_msg">FabArtist commission will be added into your hourly rate. It will vary according to category selection. Category rate :</string>
    <string name="select_cate">Select Category</string>
    <string name="val_cat_sele">Please select category.</string>
    <string name="val_name">Please enter name.</string>
    <string name="val_bio">Please enter bio.</string>
    <string name="val_location">Please enter location.</string>
    <string name="val_rate">Please enter rate.</string>
    <string name="val_youtube_url">Please enter youtube url.</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter comment</string>
    <string name="val_email">Please enter email id.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Please renter at least six characters password.</string>
    <string name="val_pass3">Password dose not match.</string>
    <string name="my_appoin">My Appointments</string>
    <string name="customer_booking">Current Booking</string>
    <string name="dec_cpas">DECLINE</string>
    <string name="decline_msg">Are you sure you want to decline request?</string>
    <string name="get_discount">Get Discount</string>
    <string name="code_copy">Code Copy</string>
    <string name="referral_msg">Hello, this is my Referral Code</string>
    <string name="opss_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="support">Chat Support</string>
    <string name="val_title">Please enter title.</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="notifications">Notifications</string>
    <string name="my_earnings">Your Earnings</string>
    <string name="earning_graph">Earning Graph</string>
    <string name="payment">Payment</string>
    <string name="process_payment">Are you sure want to process your payment?</string>
    <string name="jobs">Find Jobs</string>
    <string name="job_title">Job Title:</string>
    <string name="date">Date:</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_price">Please enter price.</string>
    <string name="inprogres">Inprogress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="start_app">Are you sure do you want to start the application?</string>
    <string name="start">Start</string>
    <string name="service">Service #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">DURATION:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="payment1">Payment ?</string>
    <string name="select_your_payment_mode">Select your payment mode</string>
    <string name="video_gallery">VIDEO GALLERY</string>
    <string name="image_gallery">IMAGE GALLERY</string>
    <string name="about">ABOUT</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="skills">SKILLS</string>
    <string name="privious_work">PREVIOUS WORK</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="apply_code">APPLY CODE</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="full_name">FULL NAME</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="gender">GENDER</string>
    <string name="password_change">PASSWORD CHANGE</string>
    <string name="set_address">SET ADDRESS</string>
    <string name="set_home_address">SET HOME ADDRESS</string>
    <string name="set_office_address">SET OFFICE ADDRESS</string>
    <string name="signout">SignOut</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="didn_t_have_any_account">Didn\'t have any account?</string>
    <string name="first_name">First name</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="do_you_have_an_account_already">Do you have an account already?</string>
    <string name="job_id">Job ID:</string>
    <string name="services_type">Services type:</string>
    <string name="apply">APPLY</string>
    <string name="reject1">REJECT</string>
    <string name="start_job">Start Job</string>
    <string name="inprogress">Inprogress</string>
    <string name="edit">EDIT</string>
    <string name="complete">COMPLETE</string>
    <string name="review_by">REVIEW BY</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title *</string>
    <string name="cancel1">CANCEL</string>
    <string name="add">ADD</string>
    <string name="add_video_url">Add Video Url</string>
    <string name="enter_youtube_url">Enter Youtube Url *</string>
    <string name="save">SAVE</string>
    <string name="apply_job">APPLY JOB</string>
    <string name="write_description">WRITE DESCRIPTION</string>
    <string name="price">PRICE</string>
    <string name="edit_about_me">EDIT ABOUT ME</string>
    <string name="add_gallery">ADD GALLERY</string>
    <string name="edit_personal_information">EDIT PERSONAL INFORMATION</string>
    <string name="select_your_speciality">SELECT YOUR SPECIALITY</string>
    <string name="your_name">YOUR NAME</string>
    <string name="your_bio">YOUR BIO</string>
    <string name="your_city">YOUR CITY</string>
    <string name="your_country">YOUR COUNTRY</string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="add_qualification">ADD QUALIFICATION</string>
    <string name="title">TITLE</string>
    <string name="description">DESCRIPTION</string>
    <string name="add_skills">ADD SKILLS</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="select">Select</string>
    <string name="search_by_job">Search By Job Title</string>
    <string name="search_by_cus">Search By Customer</string>
    <string name="no_jobs_applied">NO JOBS APPLIED</string>
    <string name="no_appointment_found">NO APPOINTMENT FOUND</string>
    <string name="no_jobs_found">NO JOBS FOUND</string>
    <string name="no_chat_history_found">NO CHAT HISTORY FOUND</string>
    <string name="no_notification_found">NO NOTIFICATION FOUND</string>
    <string name="new_request_found">NEW REQUEST FOUND</string>
    <string name="working_time">Working Time</string>
    <string name="decline">DECLINE</string>
    <string name="start_job1">START JOB</string>
    <string name="finish_the_job">FINISH THE JOB</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="no_request_found">NO REQUEST FOUND</string>
    <string name="paid1">PAID</string>
    <string name="unpaid1">UNPAID</string>
    <string name="all_jobs">ALL JOBS</string>
    <string name="applied_jobs">APPLIED JOBS</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="this_week">This Week</string>
    <string name="online_earning">Online Earning</string>
    <string name="cash_earning">Cash Earning</string>
    <string name="complete1">Complete %</string>
    <string name="total_earning">Total Earning</string>
    <string name="job_done">Job Done</string>
    <string name="total_job">Total Job</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="request_for_payment">Request For Payment</string>
    <string name="search_by_invoice">Search By InvoiceId</string>
    <string name="no_ticket_found">NO TICKET FOUND</string>
    <string name="job_done_for">JOB DONE FOR</string>
    <string name="no_history_found">NO HISTORY FOUND</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="my_rate">MY RATE</string>
    <string name="accept">ACCEPT</string>
    <string name="hour_rate">Hourly Rate</string>
    <string name="get_your_best_service_from_us">Get your best service from us</string>
    <string name="gallery">Gallery</string>
    <string name="wallet_balance">WALLET BALANCE</string>
    <string name="all">All</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="money">+ MONEY</string>
    <string name="ic_wallet">Wallet</string>
</resources>