<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.samyotech.fabartist.ui.activity.SignInActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/CTVtitel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/fab" />

    <LinearLayout
        android:id="@+id/LLsign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CTVtitel"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">

            <com.samyotech.fabartist.utils.CustomEditText
                android:id="@+id/CETemailadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/editketext"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/gray" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">

            <com.samyotech.fabartist.utils.CustomEditText
                android:id="@+id/CETenterpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/editketext"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/gray" />

        <com.samyotech.fabartist.utils.CustomTextViewBold
            android:id="@+id/CTVBforgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LLsign"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:text="@string/forgotten_password"
            android:textColor="@color/black" />

        <com.samyotech.fabartist.utils.CustomButton
            android:id="@+id/CBsignIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_selector2"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RRsncbar"
        android:layout_alignEnd="@+id/LLsign"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="184dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.samyotech.fabartist.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_have_any_account"
            android:textColor="@color/black" />

        <com.samyotech.fabartist.utils.CustomTextView
            android:id="@+id/CTVsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RRsncbar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"></RelativeLayout>

</RelativeLayout>